[gd_scene load_steps=5 format=3 uid="uid://wd5o68bowdxn"]

[ext_resource type="Theme" uid="uid://b511ckv5t4uuq" path="res://assets/temas/tema_padrao.tres" id="1_d4kxh"]
[ext_resource type="Script" uid="uid://jo5kkhuk3aqb" path="res://telas/minigames/raioX/raio_x_menu.gd" id="2_w7b5u"]
[ext_resource type="Texture2D" uid="uid://ceuydeqdoryjn" path="res://assets/imagens/mini_games/raiox/background_bioX.png" id="3_mukkn"]
[ext_resource type="Texture2D" uid="uid://cjhwawpagnm2l" path="res://assets/imagens/mini_games/raiox/logo_raioX.png" id="6_eiiep"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_d4kxh")
script = ExtResource("2_w7b5u")
metadata/_edit_use_anchors_ = true

[node name="MainBackgroud" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mukkn")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.222
anchor_top = 0.315
anchor_right = 0.778
anchor_bottom = 0.685
offset_left = 0.159958
offset_top = 18.8
offset_right = -0.160034
offset_bottom = 19.2
grow_horizontal = 2
grow_vertical = 2

[node name="GridBotoes" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
theme = ExtResource("1_d4kxh")
theme_override_constants/separation = 40

[node name="BotaoCamera" type="Button" parent="MarginContainer/GridBotoes"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "â–¶ Iniciar"

[node name="BotaoComoJogar" type="Button" parent="MarginContainer/GridBotoes"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 37
text = "Como Jogar?
"

[node name="BotaoVoltar" type="Button" parent="MarginContainer/GridBotoes"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
text = "Voltar"

[node name="TexturaJogos" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.061
anchor_right = 0.939
anchor_bottom = 0.284
offset_left = 0.079998
offset_right = -0.0800781
offset_bottom = 0.279999
grow_horizontal = 2
texture = ExtResource("6_eiiep")
expand_mode = 2

[connection signal="pressed" from="MarginContainer/GridBotoes/BotaoCamera" to="." method="_on_botao_camera_pressed"]
[connection signal="pressed" from="MarginContainer/GridBotoes/BotaoComoJogar" to="." method="_on_botao_como_jogar_pressed"]
[connection signal="pressed" from="MarginContainer/GridBotoes/BotaoVoltar" to="." method="_on_botao_voltar_pressed"]
